--- a/css/style.css
+++ b/css/style.css
@@ -587,16 +587,14 @@ img{
     height: 100%;
     fill: var(--color-svg);
     border: solid 1px var(--color-svg);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-     cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 .customers-svg:hover,
 .customers-svg:focus {
     fill: var(--accent-color);
     border: solid 1px var(--accent-color);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+    
 }
 /*========container footer========= */
 .footer{
