--- a/css/style.css
+++ b/css/style.css
@@ -587,7 +587,8 @@ img{
     height: 100%;
     fill: var(--color-svg);
     border: solid 1px var(--color-svg);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-colof 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 .customers-svg:hover,
@@ -943,10 +944,129 @@ img{
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     cursor: pointer;
+    padding-top: 30px;
 }
 .modal-close-svg{
-    
     width: 30px;
     height: 30px;
+}
+.modal-prime-div{
+    /* padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 75px;  */
+    padding: 40px;
+    margin: 0 auto;
+}
+.contact-form{
+    width: 100%;
     
+}
+.contact-form-input{
+    width: 448px;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding-bottom: 10px;
+    padding-top: 4px;
+
+}
+.contact-form-btn{
+    display: block;
+    width: 200px;
+    height: 50px;
+    margin: 0 auto;
+    color: var(--white-color);
+    background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    
+    
+}
+.contact-form-btn-text{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+    
+}
+.contact-form-message{
+    width: 100%;
+    height: 120px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-top: 4px;
+    resize: none;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+
+    /*color: rgba(117, 117, 117, 0.5); */
+    
+}
+.contact-form-message:hover,
+.contact-form-message:focus{
+    border: 1px solid #2196F3;
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+
+
+/* .contact-form-message-text{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+} */
+.modal-group-text{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 12px;
+
+    color: var(--primary-text-color);
+}
+.group-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+
+}
+
+.group-title-text {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    color: var(--title-text-color);
+    
+}
+
+.contact-yes {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+
 }
