--- a/css/style.css
+++ b/css/style.css
@@ -619,6 +619,7 @@ img{
 }
 .footer-social-div{
     padding-top: 12px;
+    margin-right: 93px;
 }
 .footer-social-list-icon {
     width: 20px;
@@ -711,6 +712,69 @@ img{
     padding-bottom: 94px; 
 } */
 /* ========Fotter Подвал====== */
+/* ========Footer форма подписаться  */
+
+.footer-form-title {
+    font-family: var(--primary-text-color);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--white-color);
+    margin-bottom: 20px;
+}
+
+.footer-form {
+    display: flex;
+    justify-content: start;
+}
+
+.footer-form-email {
+    width: 358px;
+    height: 50px;
+    padding-left: 16px;
+    margin-right: 12px;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+
+    color: rgba(255, 255, 255, 0.8);
+    background-color: var(--back-color);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+}
+
+.footer-form-email::placeholder {
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-form-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    min-width: 200px;
+    padding: 10px 28px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    cursor: pointer;
+    color: var(--white-color);
+    background-color: var(--accent-color);
+
+    font-family: var(--primary-text-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+}
+
+.footer-btn-icon {
+    margin-left: 12px;
+    fill: var(--white-color);
+}
+
 /* =========Page portfolio========= */
 .portfolio {
     padding-top: 94px;
