--- a/css/style.css
+++ b/css/style.css
@@ -985,6 +985,10 @@ img{
     pointer-events: none;
 } 
 .modal{
+    width: 528px;
+    height: 581px;
+    padding: 40px;
+
     position: absolute;
     top: 50%;
     left: 50%;
@@ -992,6 +996,10 @@ img{
     width: 528px;
     height: 581px;
     background-color: var(--white-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
     
 }
 
@@ -1014,125 +1022,161 @@ img{
     width: 30px;
     height: 30px;
 }
-.modal-prime-div{
-    /* padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 75px;  */
-    padding: 40px;
-    margin: 0 auto;
+/* =============Modal BTN форма для заполнения========= */
+.modal-form {
+    display: flex;
+    flex-direction: column;
 }
-.contact-form{
+
+.modal-form-title {
+    margin-bottom: 12px;
+
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+}
+
+.modal-form-wrapper {
+    display: block;
+    position: relative;
+    margin-top: 4px;
+}
+
+.modal-item {
+    margin-bottom: 10px;
+
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--title-text-color);
+}
+
+.modal-input {
     width: 100%;
+    height: 40px;
+    padding-left: 42px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition-property: border-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.modal-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus+.modal-icon {
+    fill: var(--accent-color);
+}
+
+.modal-comment {
+    margin-bottom: 20px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    color: var(--title-text-color);
+}
+
+.modal-message {
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    margin-top: 4px;
+    resize: none;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition-property: border-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-message:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.modal-message::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+}
+.modal-term{
+    visibility: hidden;
     
 }
-.contact-form-input{
-    width: 448px;
-    height: 40px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    box-sizing: border-box;
-    border-radius: 4px;
-    margin-bottom: 10px;
-    margin-top: 4px;
-
+.modal-form-check {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
 }
-.contact-form-btn{
+
+.modal-form-check::before {
+    content: '';
     display: block;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+    border: 1px solid var(--primary-text-color);
+    cursor: pointer;
+}
+
+.modal-term:checked+.modal-form-check::before {
+    background-image: url(../images/form/check.svg);
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
+    border: none;
+}
+
+.modal-term:focus+.modal-form-check::before {
+    outline: 1px solid var(--title-text-color);
+}
+
+.modal-form-btn {
+    align-self: center;
     width: 200px;
     height: 50px;
-    margin: 0 auto;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+
+    cursor: pointer;
     color: var(--white-color);
     background-color: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    
-    
-    
+    border: none;
 }
-.contact-form-btn-text{
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 30px;
-    letter-spacing: 0.06em;
-    
-}
-.contact-form-message{
-    width: 100%;
-    height: 120px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-top: 4px;
-    resize: none;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.01em;
 
-    /*color: rgba(117, 117, 117, 0.5); */
-    
-}
-.contact-form-message:hover,
-.contact-form-message:focus{
-    border: 1px solid #2196F3;
-    box-sizing: border-box;
+.modal-form-btn:hover,
+.modal-form-btn:focus {
+    background: #188ce8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-}
-
-
-/* .contact-form-message-text{
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.01em;
-
-    color: rgba(117, 117, 117, 0.5);
-} */
-.modal-group-text{
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 23px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 12px;
-
-    color: var(--primary-text-color);
-}
-.group-wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 30px;
-
-}
-
-.group-title-text {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.01em;
-    color: var(--title-text-color);
-    
-}
-
-.contact-yes {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.03em;
-    color: var(--title-text-color);
-
 }
